 * @dig, @open and @name now set exit aliases into the @alias attribute,
   instead of including them in the exit name. Also, @name can now set/clear
   the @alias of players/exits while changing the name. See help @name for
   details. Suggested by Minion. [MG]
 * The logging code has been rewritten to make extending it with further
   log files easier. [SW]

Fixes:
 * Fixing list type autodetect. [GM]
 * Help fixes by Daniel Powell, AnneLions, Minion and others. [MG]
 * Connect/disconnect messages for combined channels incorrectly showed
   NOSPOOF data. Reported by Sketch. [MG]
 * The delimiter between combined channel names in @chatformat is now '|'
   instead of ' | ', as documented. Reported by Trinsec. [MG]
 * ansi(h,) now returns absolutely nothing, instead of an ansi-highlighted
   nothing. Fixes a few minor/obscure bugs. [MG]
 * @edit sometimes displayed a success message even when it failed. [MG]
 * @cpattr/@mvattr would sometimes copy attribute flags, even when the
   attribute value couldn't be copied. [MG]
 * Bug in attribute comparisons added in p2 could cause attributes to
   not be found at times. [MG]
 * sortby()s results would sometimes be reversed by mistake. [GM]
 * Minor bugfix in @include. [MG]
 * round() sometimes returned numbers with more decimal digits than
   desired. 
 * The '*' option in locate() didn't actually include all match types. [MG]
 * @include incorrectly refunded the queue_cost, giving people free pennies.
   Reported by Covenent. [MG]

Version 1.8.4 patchlevel 2                                 Dec 06,  2010

Major Changes:
 * Wildcard matcher completely rewritten to avoid hangs and to provide
   ansi-aware capturing. [GM]
 * connection_fail_limit now lets you limit the # of connection fails in
   a 10 minute time by any given IP. [GM]

Minor Changes:
 * update-cnf.pl perl script now handles optional config lines, by placing
   A # OPTIONAL above them. This is for message translation. [GM]